--- a/public/css/header.css
+++ b/public/css/header.css
@@ -47,7 +47,7 @@ nav button {
 
     nav button:hover {
         background-color: var(--color-accent);
-        color: var(--color-text);
+        color: black;
     }
 
     .logo:hover {
